# trialsGuv

./: .gitignore  DEVELOPMENT_LOG.md  README.md  README_TESTING.md  main.py  pyproject.toml  pytest.ini  requirements-test.txt
tests/: __init__.py  conftest.py  test_cli.py  test_dataclasses.py  test_downloader.py  test_integration.py  test_manifest.py
